--- a/3.3 controls/app/src/main/AndroidManifest.xml
+++ b/3.3 controls/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.layout">
+    package="com.example.controls">
 
     <application
         android:allowBackup="true"
@@ -9,12 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ConstraintActivity"></activity>
+        <activity android:name=".ClickActivity" android:exported="true"></activity>
         <activity
-            android:name=".ScrollView"
+            android:name=".bbs"
             android:exported="true" />
         <activity
-            android:name=".linearLayout"
+            android:name=".Marquee"
             android:exported="true" />
         <activity android:name=".MainActivity">
             <intent-filter>
