--- a/3.3 controls/app/src/main/AndroidManifest.xml
+++ b/3.3 controls/app/src/main/AndroidManifest.xml
@@ -9,7 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ClickActivity" android:exported="true"></activity>
+        <activity
+            android:name=".IconActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".ImageScaleActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ClickActivity"
+            android:exported="true" />
         <activity
             android:name=".bbs"
             android:exported="true" />
