简单控件：文本、按钮、图像

--- a/3.3 controls/app/src/main/AndroidManifest.xml
+++ b/3.3 controls/app/src/main/AndroidManifest.xml
@@ -10,8 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".IconActivity"
+            android:name=".NineActivity"
             android:exported="true"></activity>
+        <activity
+            android:name=".ShapeActivity"
+            android:exported="true" />
+        <activity
+            android:name=".IconActivity"
+            android:exported="true" />
         <activity
             android:name=".ImageScaleActivity"
             android:exported="true" />
