--- a/3.4 controls2/app/src/main/AndroidManifest.xml
+++ b/3.4 controls2/app/src/main/AndroidManifest.xml
@@ -10,8 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".RadioActivity"
+            android:name=".SpinnerActivity"
             android:exported="true"></activity>
+        <activity
+            android:name=".RadioActivity"
+            android:exported="true" />
         <activity
             android:name=".SwitchActivity"
             android:exported="true" />
