--- a/4 storage/app/src/main/AndroidManifest.xml
+++ b/4 storage/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SQLiteReadActivity"></activity>
+        <activity android:name=".SQLiteReadActivity" android:exported="true"></activity>
         <activity
             android:name=".SQLiteWriteActivity"
             android:exported="true" />
