--- a/4 storage/app/src/main/AndroidManifest.xml
+++ b/4 storage/app/src/main/AndroidManifest.xml
@@ -14,8 +14,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".SDCardInfoActivity"
+            android:name=".TextReadActivity"
             android:exported="true"></activity>
+        <activity
+            android:name=".TextWriteActivity"
+            android:exported="true" />
+        <activity
+            android:name=".SDCardInfoActivity"
+            android:exported="true" />
         <activity
             android:name=".SQLiteReadActivity"
             android:exported="true" />
