SD卡截图和图片读写

--- a/4 storage/app/src/main/AndroidManifest.xml
+++ b/4 storage/app/src/main/AndroidManifest.xml
@@ -14,8 +14,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".ImageReadActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ImageWriteActivity"
+            android:exported="true" />
+        <activity
             android:name=".TextReadActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".TextWriteActivity"
             android:exported="true" />
