--- a/4 storage/app/src/main/AndroidManifest.xml
+++ b/4 storage/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.example.storage">
     <!-- SD卡读写权限 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAG" /> <!-- 在SDCard中创建与删除文件权限 -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAG" />
+    <!-- 在SDCard中创建与删除文件权限 -->
     <permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
     <application
