--- a/4 storage/build.gradle
+++ b/4 storage/build.gradle
@@ -1,3 +1,5 @@
+import javax.tools.JavaCompiler
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
@@ -16,6 +18,12 @@ allprojects {
     repositories {
         google()
         jcenter()
+    }
+}
+
+gradle.projectsEvaluated {
+    tasks.withType(JavaCompile){
+        options.compilerArgs<<"-Xlint:unchecked"<<"-Xlint:deprecation"
     }
 }
 
