高级控件-时间选择器

--- a/5 senior/app/src/main/AndroidManifest.xml
+++ b/5 senior/app/src/main/AndroidManifest.xml
@@ -10,8 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".DatePickerDialogActivity"
+            android:name=".TimePickerDialogActivity"
             android:exported="true"></activity>
+        <activity
+            android:name=".TimePickerActivity"
+            android:exported="true" />
+        <activity
+            android:name=".DatePickerDialogActivity"
+            android:exported="true" />
         <activity
             android:name=".DatePickerActivity"
             android:exported="true" />
