--- a/4.5 shoppingCart/app/src/main/AndroidManifest.xml
+++ b/4.5 shoppingCart/app/src/main/AndroidManifest.xml
@@ -2,11 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.shoppingcart">
 
-    <!-- SD卡读写权限 -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAG" /> <!-- 在SDCard中创建与删除文件权限 -->
-    <permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-
     <application
         android:name=".MainApplication"
         android:allowBackup="true"
@@ -15,7 +10,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity
+            android:name=".ShoppingChannelActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ShoppingCartProActivity"
+            android:exported="true" />
         <activity
             android:name=".ShoppingDetailActivity"
             android:theme="@style/AppBaseTheme" />
@@ -32,6 +32,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+    </application> <!-- 在SDCard中创建与删除文件权限 -->
+    <permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAG" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 </manifest>
