--- a/5 senior/app/src/main/AndroidManifest.xml
+++ b/5 senior/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".TimePickerDialogActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".TimePickerActivity"
             android:exported="true" />
