--- a/5 senior/app/src/main/AndroidManifest.xml
+++ b/5 senior/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".ViewPagerActivity"
+            android:exported="true"></activity>
+        <activity
             android:name=".GridViewActivity"
             android:exported="true" />
         <activity
