--- a/5 senior/app/src/main/AndroidManifest.xml
+++ b/5 senior/app/src/main/AndroidManifest.xml
@@ -10,8 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ViewPagerActivity"
+            android:name=".LaunchSimpleActivity"
             android:exported="true"></activity>
+        <activity
+            android:name=".ViewPagerActivity"
+            android:exported="true" />
         <activity
             android:name=".GridViewActivity"
             android:exported="true" />
