动态注册/碎片适配器

--- a/5 senior/app/src/main/AndroidManifest.xml
+++ b/5 senior/app/src/main/AndroidManifest.xml
@@ -10,8 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".FragmentDynamicActivity"
+            android:exported="true" />
+        <activity
             android:name=".FragmentStaticActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".LaunchSimpleActivity"
             android:exported="true" />
