--- a/5 senior/app/src/main/AndroidManifest.xml
+++ b/5 senior/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".LaunchImproveActivity" android:exported="true"></activity>
         <activity
             android:name=".FragmentDynamicActivity"
             android:exported="true" />
