--- a/5 senior/app/src/main/AndroidManifest.xml
+++ b/5 senior/app/src/main/AndroidManifest.xml
@@ -10,8 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".BroadTempActivity"
+            android:name=".AlarmActivity"
             android:exported="true"></activity>
+        <activity
+            android:name=".BroadTempActivity"
+            android:exported="true" />
+
         <activity
             android:name=".LaunchImproveActivity"
             android:exported="true" />
@@ -49,6 +53,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name=".AlarmActivity$AlarmReceiver">
+            <intent-filter>
+                <action android:name="com.example.senior.AlarmActivity.AlarmReceiver" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
