--- a/5 senior/app/src/main/AndroidManifest.xml
+++ b/5 senior/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.senior">
-
+    <!-- 震动 -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,12 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".AlarmActivity"
+            android:name=".VibratorActivity"
             android:exported="true"></activity>
+        <activity
+            android:name=".AlarmActivity"
+            android:exported="true" />
         <activity
             android:name=".BroadTempActivity"
             android:exported="true" />
-
         <activity
             android:name=".LaunchImproveActivity"
             android:exported="true" />
@@ -53,11 +55,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <receiver android:name=".AlarmActivity$AlarmReceiver">
             <intent-filter>
                 <action android:name="com.example.senior.AlarmActivity.AlarmReceiver" />
             </intent-filter>
         </receiver>
     </application>
+
+    <uses-permission android:name="android.permission.VIBRATE" />
 
 </manifest>
