--- a/6 group/app/src/main/AndroidManifest.xml
+++ b/6 group/app/src/main/AndroidManifest.xml
@@ -10,9 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ToolbarActivity"
+            android:name=".OverflowMenuActivity"
             android:exported="true"
             android:theme="@style/AppCompatTheme"></activity>
+        <activity
+            android:name=".ToolbarActivity"
+            android:exported="true"
+            android:theme="@style/AppCompatTheme" />
         <activity
             android:name=".TabFragmentActivity"
             android:exported="true" />
