--- a/6 group/app/src/main/AndroidManifest.xml
+++ b/6 group/app/src/main/AndroidManifest.xml
@@ -10,9 +10,23 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".SearchResultActvity"
+            android:theme="@style/AppCompatTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
+        <activity
+            android:name=".SearchViewActivity"
+            android:exported="true"
+            android:theme="@style/AppCompatTheme" />
+        <activity
             android:name=".OverflowMenuActivity"
             android:exported="true"
-            android:theme="@style/AppCompatTheme"></activity>
+            android:theme="@style/AppCompatTheme" />
         <activity
             android:name=".ToolbarActivity"
             android:exported="true"
