简单标签布局

--- a/6 group/app/src/main/AndroidManifest.xml
+++ b/6 group/app/src/main/AndroidManifest.xml
@@ -10,11 +10,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".ToolbarCustomActivity"
+            android:exported="true"
+            android:theme="@style/AppCompatTheme"></activity>
+        <activity
             android:name=".SearchResultActvity"
             android:theme="@style/AppCompatTheme">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
