banner 占用状态栏

--- a/6 group/app/src/main/AndroidManifest.xml
+++ b/6 group/app/src/main/AndroidManifest.xml
@@ -10,9 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".BannerPagerActivity"
+            android:name=".BannerTopActivity"
             android:exported="true"
             android:theme="@style/AppCompatTheme"></activity>
+        <activity
+            android:name=".BannerPagerActivity"
+            android:exported="true"
+            android:theme="@style/AppCompatTheme" />
         <activity
             android:name=".BannerIndicatorActivity"
             android:exported="true"
