--- a/6 group/app/src/main/AndroidManifest.xml
+++ b/6 group/app/src/main/AndroidManifest.xml
@@ -10,9 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".RecyclerLinearActivity"
+            android:exported="true"></activity>
+        <activity
             android:name=".BannerTopActivity"
             android:exported="true"
-            android:theme="@style/AppCompatTheme"></activity>
+            android:theme="@style/AppCompatTheme" />
         <activity
             android:name=".BannerPagerActivity"
             android:exported="true"
