--- a/6 group/app/src/main/AndroidManifest.xml
+++ b/6 group/app/src/main/AndroidManifest.xml
@@ -10,8 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".RecyclerStaggeredActivity"
+            android:name=".RecyclerDynamicActivity"
             android:exported="true"></activity>
+        <activity
+            android:name=".RecyclerStaggeredActivity"
+            android:exported="true" />
         <activity
             android:name=".RecyclerCombineActivity"
             android:exported="true" />
