--- a/event/app/src/main/AndroidManifest.xml
+++ b/event/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".KeyHardActivity" android:exported="true"></activity>
+        <activity
+            android:name=".VolumeSetActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".KeyHardActivity"
+            android:exported="true" />
         <activity
             android:name=".KeySoftActivity"
             android:exported="true" />
