--- a/event/app/src/main/AndroidManifest.xml
+++ b/event/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TouchMultipleActivity" android:exported="true"></activity>
+        <activity android:name=".GestureDetectorActivity" android:exported="true"></activity>
+        <activity
+            android:name=".TouchMultipleActivity"
+            android:exported="true" />
         <activity
             android:name=".TouchSingleActivity"
             android:exported="true" />
