--- a/event/app/src/main/AndroidManifest.xml
+++ b/event/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".DisallowScrollActivity" android:exported="true"></activity>
         <activity
             android:name=".CustomScrollActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".BannerFlipperActivity"
             android:exported="true" />
