--- a/8 mixture/app/src/main/AndroidManifest.xml
+++ b/8 mixture/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mixture">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,8 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".WebLocalActivity"
+            android:name=".WebSpanActivity"
             android:exported="true"></activity>
+        <activity
+            android:name=".WebLocalActivity"
+            android:exported="true" />
         <activity
             android:name=".AssetsImageActivity"
             android:exported="true" />
