--- a/8 mixture/app/src/main/AndroidManifest.xml
+++ b/8 mixture/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mixture">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,8 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".WebScriptActivity"
+            android:exported="true" />
+        <activity
+            android:name=".WebBrowserActivity"
+            android:exported="true" />
+        <activity
             android:name=".WebSpanActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".WebLocalActivity"
             android:exported="true" />
@@ -24,5 +28,7 @@
             android:name=".AssetsTextActivity"
             android:exported="true" />
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
