--- a/3.4 controls2/app/build.gradle
+++ b/3.4 controls2/app/build.gradle
@@ -1,14 +1,21 @@
 apply plugin: 'com.android.application'
 
 android {
+    // 指定编译用的SDK版本号。如30表示使用Android X编译
     compileSdkVersion 30
+    // 指定编译工具的版本号,这里的头两位数字必须与compileSdk Version 保持一致,具体的版本可在sdk安装目录的“sdk build-tools ”下找到
     buildToolsVersion "30.0.0"
 
     defaultConfig {
+        // 指定该模块的应用编号,即App的包名。该参数为自动生成,无需修改
         applicationId "com.example.controls2"
+        // 指定App适合运行的最小SDK版本号,如16表示至少要在4.1上运行
         minSdkVersion 16
+        // 指定目标设备的SDK版本号,即该App最希望在哪个版本的Android 上运行
         targetSdkVersion 30
+        // 指定App的应用版本号
         versionCode 1
+        // 指定App的应用版本名称
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -16,18 +23,22 @@ android {
 
     buildTypes {
         release {
+            // 指定是否开启代码混淆功能。true表示开启混淆,false表示无需混淆
             minifyEnabled false
+            // 指定代码混规则文件的文件名
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 }
-
+// 指定App编译的依赖信息
 dependencies {
+    // 指定引用jar包的路径
     implementation fileTree(dir: "libs", include: ["*.jar"])
+    //指定编译Android 的高版本支持库,如AppCompatActivity
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    // 指定单元测试编译用的junit 版本号
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
 }
