--- a/BaiduMapsApiASDemo/local.properties
+++ b/BaiduMapsApiASDemo/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Aug 27 19:42:28 CST 2020
-sdk.dir=/Users/zoey/Library/Android/sdk
+#Tue Sep 01 19:27:59 CST 2020
+sdk.dir=C\:\\Users\\xiafu\\AppData\\Local\\Android\\Sdk
