--- a/3.2 layout/app/src/main/AndroidManifest.xml
+++ b/3.2 layout/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ConstraintActivity"></activity>
+        <activity android:name=".ConstraintActivity" android:exported="true"></activity>
         <activity
             android:name=".ScrollView"
             android:exported="true" />
