--- a/BaiduMapsApiASDemo/local.properties
+++ b/BaiduMapsApiASDemo/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Sep 01 19:27:59 CST 2020
-sdk.dir=C\:\\Users\\xiafu\\AppData\\Local\\Android\\Sdk
+#Sun Sep 27 09:25:34 CST 2020
+sdk.dir=/Users/zoey/Library/Android/sdk
